@@ -25,6 +25,20 @@ beta = 2.0:  One-pass E-Scheme kT Axes
        1.000000     11.804760      9.219812      6.725069      0.781025      0.729415
        2.000000      1.293815      0.827980      0.756863      0.639953      0.914107
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Subjets found using beta = 1.0 tau values
+jet #          rap       phi         pt          m          e
+    1      -0.8673    2.9051   983.3873    39.9912  1378.1622
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+jet #          rap       phi         pt          m          e
+    1      -0.7959    2.8213    36.9260     4.1240    49.5577
+    2      -0.8701    2.9084   946.5959    25.7449  1328.6045
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+jet #          rap       phi         pt          m          e
+    1      -0.8900    2.9133   149.6693     8.2524   213.2875
+    2      -0.8664    2.9075   796.9288    11.6617  1115.3170
+    3      -0.7959    2.8213    36.9260     4.1240    49.5577
+-------------------------------------------------------------------------------------
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Axes used for above beta = 1.0 tau values
 jet #          rap       phi         pt          m          e
     1      -0.8679    2.9071   983.3836     0.0000  1377.5818
@@ -50,6 +64,20 @@ beta = 2.0:  One-pass E-Scheme kT Axes
            beta          tau1          tau2          tau3     tau2/tau1     tau3/tau2
        1.000000     16.052840     12.479353     10.253741      0.777392      0.821656
        2.000000      6.953861      3.804487      3.737265      0.547104      0.982331
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Subjets found using beta = 1.0 tau values
+jet #          rap       phi         pt          m          e
+    1       0.2195    6.0349   908.0979    87.7124   934.3868
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+jet #          rap       phi         pt          m          e
+    1       0.2716    0.3354     8.9852     3.7341    10.0912
+    2       0.2189    6.0294   900.6142    59.5448   924.2956
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+jet #          rap       phi         pt          m          e
+    1      -0.1831    5.9784    10.1884     3.5582    10.9733
+    2       0.2239    6.0300   890.4392    28.4501   913.3223
+    3       0.2716    0.3354     8.9852     3.7341    10.0912
+-------------------------------------------------------------------------------------
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Axes used for above beta = 1.0 tau values
 jet #          rap       phi         pt          m          e
